--- a/Invessence/modules/web/src/main/webapp/template/common/template.xhtml
+++ b/Invessence/modules/web/src/main/webapp/template/common/template.xhtml
@@ -57,12 +57,12 @@
                              message="You have been idle for long time."
                              header="Are you there?" severity="alert" widgetVar="c">
                 <p:commandButton id="idLogout" value="Logout" update="msg"
-                                 actionListener="#{sessionControl.onIdleSessionLogout}"/>
+                                 onclick="SessionExpireEvent()"/>
                 <p:commandButton id="idContinue" value="I Am Still Here" update="msg"
                                  oncomplete="fnDisableDialog()"
                                  actionListener="#{sessionControl.onActive}"/>
                 <p:commandButton id="idOk" value="Ok" update="msg"
-                                 onclick="fnDisableVisitorDialog()"/>
+                                 onclick="fnDisableVisitorDialog()" style="width: 100px;display: block;margin: 5px auto;"/>
 
 
             </p:confirmDialog>
