--- a/Invessence/modules/web/src/main/webapp/resources/citi/css/citiCustom.css
+++ b/Invessence/modules/web/src/main/webapp/resources/citi/css/citiCustom.css
@@ -4590,3 +4590,44 @@ margin-left: 15px;}
 .Wid23 {width: 23%;}
 
 .uob_graphTable {margin-left: 30px !important;}
+
+.citibutton_gs span{background-color: #1572b8 !important; color: #fff;}
+
+#hoodbutton {
+	position: relative;
+	display: block;
+	padding: .4em .4em .4em 2em;
+	margin: .5em 0;
+	background: #5975D9;
+	color: white;
+	text-decoration: none;
+	box-shadow: inset 0.5em 0 #3b4e8f;
+	-webkit-transition: box-shadow 1s;
+	transition: box-shadow 1s;
+	width: 60%;
+	clear: both;
+	text-align: left;
+	margin-left: 5%;
+}
+#hoodbutton a:after {
+	content: "+";
+	font-size: 25px;
+	position: absolute;
+	margin-left: 77%;
+	top: 0px;
+-webkit-transition: all 500ms ease;
+-moz-transition: all 500ms ease;
+-ms-transition: all 100ms ease;
+-o-transition: all 100ms ease;
+transition: all 500ms ease;}
+
+#hoodbutton.active a::after {
+	-moz-transform: rotate(-405deg);
+	-webkit-transform: rotate(-405deg);
+	-o-transform: rotate(-405deg);
+	-ms-transform: rotate(-405deg);
+	transform: rotate(-405deg);
+}
+
+.hood {width: 60%;display: none;    text-align: left;
+	margin-left: 6%;}
