--- a/Invessence/modules/web/src/main/webapp/resources/invessence/1_0/css/invessenceCustom.css
+++ b/Invessence/modules/web/src/main/webapp/resources/invessence/1_0/css/invessenceCustom.css
@@ -3506,7 +3506,7 @@ a {
 }
 
 .backButtonLP, .RPHeadings1, .RiskValuePanel {
-	border-right: 1px solid #666666;
+	border-right: 0px solid #666666;
 }
 
 .nextButtonLP, .RPHeadings1 {
@@ -3588,7 +3588,7 @@ span > input {
 
 .fineTuneBlock {
 	width: 30%;
-	height: 370px;
+	height: 420px;
 	position: absolute;
 	background: white;
 	border:0;
@@ -4437,4 +4437,30 @@ padding: 10px 0px;
 		display: none;
 	}
 }
+
+.RPHeadings1, .RPHeadings2 {
+	padding: 6px 20px;
+	margin-right: 2px;
+	font-size: 22px !important;
+	border-radius: 4px 4px 0 0;
+	-moz-box-shadow: inset 0 3px 8px rgba(0,0,0,.4);
+	-webkit-box-shadow: inset 0 3px 8px rgba(0,0,0,.4);
+	box-shadow: inset 0 3px 8px rgba(0,0,0,.24);
+	-webkit-transition: all 600ms ease;
+	-moz-transition: all 600ms ease;
+	-ms-transition: all 600ms ease;
+	-o-transition: all 600ms ease;
+	transition: all 600ms ease;
+}
+
+.RPHeadings1.active, .RPHeadings2.active {
+	background-color: #a4332f;
+	color: #fff;
+	-webkit-transition: all 600ms ease;
+	-moz-transition: all 600ms ease;
+	-ms-transition: all 600ms ease;
+	-o-transition: all 600ms ease;
+	transition: all 600ms ease;
+}
+
 
