--- a/Invessence/modules/web/src/main/webapp/template/common/modena/layout.xhtml
+++ b/Invessence/modules/web/src/main/webapp/template/common/modena/layout.xhtml
@@ -25,7 +25,7 @@
 
     <p:ajaxStatus style="width:128px;height:128px;position:fixed;right:5px;bottom:5px">
         <f:facet name="start">
-            <p:graphicImage name="demo/images/preloader.gif"/>
+            <p:graphicImage name="images/preloader.gif" library="demo"/>
         </f:facet>
 
         <f:facet name="complete">
