--- a/Invessence/modules/web/src/main/webapp/template/common/spark/layoutHeader.xhtml
+++ b/Invessence/modules/web/src/main/webapp/template/common/spark/layoutHeader.xhtml
@@ -8,7 +8,7 @@
     <div id="menu-mask"></div>
     <p:ajaxStatus styleClass="tcmLoaderBackground">
         <f:facet name="start">
-            <p:graphicImage name="demo/images/preloader.gif"/>
+            <p:graphicImage name="images/loader.gif" library="invessence"/>
         </f:facet>
 
         <f:facet name="complete">
