--- a/Invessence/modules/web/src/main/webapp/template/common/spark/nolayout.xhtml
+++ b/Invessence/modules/web/src/main/webapp/template/common/spark/nolayout.xhtml
@@ -11,7 +11,7 @@
 
     <p:ajaxStatus style="position:fixed;right:5px;bottom:5px">
         <f:facet name="start">
-            <p:graphicImage name="demo/images/preloader.gif"/>
+            <p:graphicImage name="images/loader.gif" library="invessence"/>
         </f:facet>
 
         <f:facet name="complete">
