--- a/Invessence/modules/web/src/main/webapp/template/common/spark/layoutmenu.xhtml
+++ b/Invessence/modules/web/src/main/webapp/template/common/spark/layoutmenu.xhtml
@@ -16,6 +16,12 @@
             <p:menuitem value="New Account" rendered="#{webutil.hasAccess('USER')}"
                         actionListener="#{uiLayout.doMenuAction('consumer', 'cadd.xhtml?app=N')}"/>
 
+            <p:menuitem value="Account Emulation" rendered="#{webutil.hasRole('DEVELOPER')}"
+                        actionListener="#{uiLayout.doMenuAction('productadmin','accountEmulation.xhtml')}"/>
+
+            <p:menuitem value="File Processing" rendered="#{webutil.hasRole('DEVELOPER')}"
+                        actionListener="#{uiLayout.doMenuAction('productadmin','fileProcessEmulation.xhtml')}"/>
+
             <p:menuitem value="Aggregation" style="margin: 0px 20px;" rendered="#{webutil.isAggregatorMenuActive()}"
                     actionListener="#{aggrBean.startup('D')}" />
 
