--- a/Invessence/modules/web/src/main/webapp/template/common/spark/topbar.xhtml
+++ b/Invessence/modules/web/src/main/webapp/template/common/spark/topbar.xhtml
@@ -24,7 +24,18 @@
                             <a href="/pages/consumer/tcm/cadd.xhtml?app=N" class="Animated05">New Account</a>
                         </ui:fragment>
                     </li>
-
+                    <li class="MobileModeOnly">
+                        <ui:fragment rendered="#{webutil.hasRole('DEVELOPER')}">
+                            <!--<a href="/pages/consumer/tcm/cadd.xhtml?app=N" class="Animated05"><i class="fa fa-plus-square"></i> New Account</a>-->
+                            <a href="/pages/productadmin/fileProcessEmulation.xhtml" class="Animated05">   File Processing</a>
+                        </ui:fragment>
+                    </li>
+                    <li class="MobileModeOnly">
+                        <ui:fragment rendered="#{webutil.hasRole('DEVELOPER')}">
+                            <!--<a href="/pages/consumer/tcm/cadd.xhtml?app=N" class="Animated05"><i class="fa fa-plus-square"></i> New Account</a>-->
+                            <a href="/pages/productadmin/accountEmulation.xhtml" class="Animated05">    Account Emulation</a>
+                        </ui:fragment>
+                    </li>
                     <ui:fragment rendered="#{webutil.isAggregatorMenuActive()}">
                         <li class="MobileModeOnly">
                             <h:form>
