Prashant 06/29/2017 Introduced additional master scripts

--- a/Invessence/modules/web/src/main/webapp/template/common/invessence/layoutmenuHeader.xhtml
+++ b/Invessence/modules/web/src/main/webapp/template/common/invessence/layoutmenuHeader.xhtml
@@ -137,7 +137,7 @@
             </ui:fragment>
             <ui:fragment rendered="#{webutil.hasAccess('ADVISOR')}">
                 <li id="tradeMenuHighlight">
-                    <a href="/pages/advisor/operations/trade.xhtml/advisor/trade.xhtml" id="menutradebtn">Trade</a>
+                    <a href="/pages/advisor/operations/trade.xhtml" id="menutradebtn">Trade</a>
                 </li>
             </ui:fragment>
             <ui:fragment rendered="#{webutil.hasRole('DEVELOPER')}">
