Code check in By Sagar for File Processing changes

--- a/Invessence/modules/web/src/main/webapp/template/common/invessence/layoutmenuHeader.xhtml
+++ b/Invessence/modules/web/src/main/webapp/template/common/invessence/layoutmenuHeader.xhtml
@@ -142,12 +142,12 @@
             </ui:fragment>
             <ui:fragment rendered="#{webutil.hasRole('DEVELOPER')}">
                 <li id="filePrcsMenuHighlight">
-                    <a href="/pages/productadmin/fileProcessEmulation.xhtml" id="menutradebtn">File Processing</a>
+                    <a href="/pages/productadmin/fileProcessEmulation.xhtml" id="menuFlPrcsbtn">File Processing</a>
                 </li>
             </ui:fragment>
             <ui:fragment rendered="#{webutil.hasRole('DEVELOPER')}">
                 <li id="AcctEmulMenuHighlight">
-                    <a href="/pages/productadmin/accountEmulation.xhtml" id="menutradebtn">Account Emulation</a>
+                    <a href="/pages/productadmin/accountEmulation.xhtml" id="menuAcctEmulbtn">Account Emulation</a>
                 </li>
             </ui:fragment>
 
