--- a/Invessence/modules/web/src/main/webapp/resources/invessence/1_0/css/invessenceCustom.css
+++ b/Invessence/modules/web/src/main/webapp/resources/invessence/1_0/css/invessenceCustom.css
@@ -4185,6 +4185,7 @@ span > input {
     background: white;
     padding: 10px 0px;
     margin-top: 5px;
+    z-index: 9999;
 }
 
 .displaymobMenuView {
@@ -4827,63 +4828,28 @@ color: #fff;
 
 }
 
-.activetabetrade {    padding: 10px;
-    background-color: #009abb;
+.activetabetrade {
+background-color:#009abb !important;
     color: #fff;
-    padding-bottom: 20px;
-    height: 50px;
-    line-height: 42px;
+    padding: 10px 30px;
+
     border-radius: 0px;
-    border-left: 20px solid transparent;
-    border-right: 20px solid transparent;
-    -moz-box-shadow:  none;
-    -webkit-box-shadow:  none;
+
+    -moz-box-shadow: none;
+    -webkit-box-shadow: none;
     box-shadow: none;
     -webkit-transition: all 600ms ease;
     -moz-transition: all 600ms ease;
     -ms-transition: all 600ms ease;
     -o-transition: all 600ms ease;
     transition: all 600ms ease;
-    margin-right: 2px;}
+    margin-right: 2px;
+    font-size: 18px !important;}
 
 .inactivetabtrade{
     border-radius: 0px;
-    padding: 10px 35px;
-    padding-bottom: 20px;
--moz-box-shadow: inset 0 3px 8px rgba(0, 0, 0, .4);
--webkit-box-shadow: inset 0 3px 8px rgba(0, 0, 0, .4);
-box-shadow: inset 0 3px 8px rgba(0, 0, 0, .24);
--webkit-transition: all 600ms ease;
--moz-transition: all 600ms ease;
--ms-transition: all 600ms ease;
--o-transition: all 600ms ease;
-transition: all 600ms ease;}
-
-
-
-.activetabereview {    padding: 10px;
-    background-color: #009abb;
-    color: #fff;
-    padding-bottom: 20px;
-    height: 50px;
-    line-height: 42px;
-    border-radius: 0px;
-    border-left: 20px solid transparent;
-    border-right: 20px solid transparent;
-    -moz-box-shadow:  none;
-    -webkit-box-shadow:  none;
-    box-shadow: none;
-    -webkit-transition: all 600ms ease;
-    -moz-transition: all 600ms ease;
-    -ms-transition: all 600ms ease;
-    -o-transition: all 600ms ease;
-    transition: all 600ms ease;
-    margin-right: 2px;}
-
-.inactivetabreview{
-    border-radius: 0px;
-    padding: 10px 35px;
-    padding-bottom: 20px;
+    padding: 10px 30px;
+    font-size: 18px !important;
     -moz-box-shadow: inset 0 3px 8px rgba(0, 0, 0, .4);
     -webkit-box-shadow: inset 0 3px 8px rgba(0, 0, 0, .4);
     box-shadow: inset 0 3px 8px rgba(0, 0, 0, .24);
@@ -4892,6 +4858,41 @@ transition: all 600ms ease;}
     -ms-transition: all 600ms ease;
     -o-transition: all 600ms ease;
     transition: all 600ms ease;}
+
+
+
+.activetabereview {   background-color:#009abb !important;
+    color: #fff;
+    padding: 10px 30px;
+
+    border-radius: 0px;
+
+    -moz-box-shadow: none;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    -webkit-transition: all 600ms ease;
+    -moz-transition: all 600ms ease;
+    -ms-transition: all 600ms ease;
+    -o-transition: all 600ms ease;
+    transition: all 600ms ease;
+    margin-right: 2px;
+    font-size: 18px !important;}
+
+.inactivetabreview{
+    border-radius: 0px;
+    padding: 10px 30px;
+    font-size: 18px !important;
+    -moz-box-shadow: inset 0 3px 8px rgba(0, 0, 0, .4);
+    -webkit-box-shadow: inset 0 3px 8px rgba(0, 0, 0, .4);
+    box-shadow: inset 0 3px 8px rgba(0, 0, 0, .24);
+    -webkit-transition: all 600ms ease;
+    -moz-transition: all 600ms ease;
+    -ms-transition: all 600ms ease;
+    -o-transition: all 600ms ease;
+    transition: all 600ms ease;}
+
+.tabborderbottom {    border-bottom: 2px solid #009abb !important;
+    border-radius: 0px !important;}
 
 .rollbackbutton{padding: 0 !important; float: right !important;}
 
